--- a/gateway/.env-cmdrc
+++ b/gateway/.env-cmdrc
@@ -1,6 +1,8 @@
 {
   "development": {
-   "PORT" : 3101
+   "PORT" : 3101,
+   "BCRYPT_SALT_ROUNDS" : 10,
+   "JWT_KEY" : "all are humans"
   },
   "test": {
     "ENV1": "No Thanks",
