--- a/gateway/package.json
+++ b/gateway/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env-cmd -e development nodemon server.js --ext .js",
-    "start": "node server.js"
+    "dev": "env-cmd -e development nodemon src/server.js --ext .js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,8 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.14",
+    "nodemon": "^2.0.7",
+    "validator": "^13.6.0"
   }
 }
